# fastmcp-gateway

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: requirements.md
docs/research/: 01-gateway-landscape.md  02-progressive-discovery-prior-art.md  03-fastmcp-building-blocks.md  04-why-build-new.md  05-community-anchors.md  06-language-and-architecture.md  07-pydantic-ai-integration.md  08-observability.md  09-connection-lifecycle.md  10-meta-tool-schemas.md
examples/kubernetes/: Dockerfile  deployment.yaml
src/fastmcp_gateway/: __init__.py  __main__.py  _auth_loading.py  _hook_loading.py  _middleware_loading.py  _registry_token_provider_loading.py  access_policy.py  client_manager.py  code_mode.py  errors.py  gateway.py  hooks.py  injection_patterns.py  meta_tools.py  output_guard.py  registration_auth.py  registry.py  sanitize.py  signatures.py  tool_name.py  url_guard.py
tests/: conftest.py  test_access_policy.py  test_annotations.py  test_auth_allowlist.py  test_auth_passthrough.py  test_client_manager.py  test_client_manager_token_provider.py  test_code_mode.py  test_collisions.py  test_discover_tools.py  test_errors.py  test_execute_tool.py  test_gateway.py  test_get_tool_schema.py  test_health.py  test_hook_allowlist.py  test_hooks.py  test_hooks_after_list_tools.py  test_hooks_integration.py  test_integration.py  test_main.py  test_middleware_allowlist.py  test_otel_spans.py  test_output_guard.py  test_refresh.py  test_registration.py  test_registration_auth.py  test_registration_error_model.py  test_registry.py  test_registry_token_provider_loading.py  test_sanitize.py  test_schema_integrity.py  test_signatures.py  test_suggest_visibility.py  test_tool_name.py  test_url_guard.py
