[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-gateway"
# ``__version__`` in ``src/fastmcp_gateway/__init__.py`` is the single
# source of truth. Hatchling reads it at build time via the
# ``[tool.hatch.version]`` block below, so a release bumps exactly
# one line — no possibility of the PyPI metadata and the installed
# ``__version__`` drifting out of sync.
dynamic = ["version"]
description = "Progressive tool discovery gateway for MCP, built on FastMCP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Ultrathink Solutions" }]
keywords = ["mcp", "fastmcp", "gateway", "llm", "tools", "progressive-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0",
    "opentelemetry-api>=1.20",
    "pydantic>=2.0",
    # PyJWT with the [crypto] extra powers ``JWTRegistrationValidator``
    # in ``fastmcp_gateway.registration_auth``. The extra pulls in
    # ``cryptography`` (~7MB wheel), which is why the ``import jwt``
    # inside the validator is deferred to runtime — deployments that
    # only use the legacy static-bearer registration path (or no
    # registration at all) never touch the JWT code path, but still
    # need the library installed so importing the module doesn't
    # fail on a missing dependency if a caller chooses to opt in.
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "opentelemetry-sdk>=1.39.1",
    "pydantic-ai>=0.1",
    "pydantic-monty>=0.0.12",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
code-mode = [
    "pydantic-monty>=0.0.12",
]

[project.scripts]
fastmcp-gateway = "fastmcp_gateway.__main__:main"

[project.urls]
Homepage = "https://github.com/Ultrathink-Solutions/fastmcp-gateway"
Repository = "https://github.com/Ultrathink-Solutions/fastmcp-gateway"
Issues = "https://github.com/Ultrathink-Solutions/fastmcp-gateway/issues"

[tool.hatch.version]
# Hatchling parses ``__version__ = "..."`` from this file and uses
# it as the distribution version (the ``dynamic = ["version"]``
# entry under ``[project]`` opts into this).
path = "src/fastmcp_gateway/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_gateway"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["fastmcp_gateway"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
